<resources>
    <string name="app_name">ManageIt</string>
    <string name="secure_your_passwords">Secure Your Passwords...</string>

    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="email">Email</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="UserName">UserName</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="already_have_an_account">Already have an Account</string>

    <string name="Aboutt">Hello, this is Harshal Powankar. I am thrilled to introduce you to my ManageIt! app,
        where you can create passwords in real-time, without the need for refreshing the page.
        With its real-time database, your data is stored securely and accessible from anywhere in the world.
        The app boasts an attractive and user-friendly interface, designed to make your life easier.
        Thank you for choosing my app.
        If you are interested in collaborating on an open-source project, feel free to reach out to me through the handle below.</string>


    <string name="account_name">Account Name</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="about_us">About us</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="add_new_password">Add New Password</string>
    <string name="user_id">User Id</string>
    <string name="other_details">Other Details</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="g">G</string>
    <string name="google">Google</string>
    <string name="_12_05_2000">12/05/2000</string>
    <string name="add_your_passwords">Add your Passwords...</string>
    <string name="copy_username">Copy UserName</string>
    <string name="copy_password">Copy Password</string>
    <string name="verify_your_fingerprint">Verify Your Fingerprint</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="manageit">ManageIt!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="make_sure_wifi_or_mobile_data_is_turned_on">Make sure wifi or mobile data is turned on..</string>


</resources>