<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">


    <ImageView
        android:id="@+id/tvLogIllustration"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:cropToPadding="true"
        android:orientation="vertical"
        android:scaleType="fitCenter"
        android:src="@drawable/al_phone"
        android:translationX="-40dp"
        android:translationY="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etLogEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLogEmail"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxCornerRadiusTopStart="3dp"
        app:boxStrokeColor="@color/box_stroke_color"
        app:boxStrokeErrorColor="@color/black"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/box_stroke_color"
        app:errorEnabled="true"
        app:errorIconTint="@color/sushi_red_600"
        app:errorTextColor="@color/sushi_red_600"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogIllustration"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="multiply"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLogPassword"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxCornerRadiusTopStart="3dp"
        app:boxStrokeColor="@color/box_stroke_color"
        app:boxStrokeErrorColor="@color/black"
        app:boxStrokeWidthFocused="1dp"
        app:endIconTint="@color/box_stroke_color"
        app:errorEnabled="true"
        app:errorIconTint="@color/sushi_red_600"
        app:errorTextColor="@color/sushi_red_600"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/etLogEmail"
        app:layout_constraintStart_toStartOf="@+id/etLogEmail"
        app:layout_constraintTop_toBottomOf="@+id/etLogEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="multiply"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvLogForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/forgot"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etLogPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLogPassword" />

    <Button
        android:id="@+id/btnLogLogin"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textColor="#00BCD4"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/etLogPassword"
        app:layout_constraintStart_toStartOf="@+id/etLogPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvLogForgot" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnLogLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLogLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvLogSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.811" />


</androidx.constraintlayout.widget.ConstraintLayout>