<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_orange"
    tools:context=".passwords.CreatePasswordActivity">


    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/backArrowCPassword"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/addNewCPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/backArrowCPassword"
            android:text="@string/add_new_password"
            android:textSize="25sp"
            android:textStyle="bold"
            app:tint="#00BCD4"
            tools:ignore="RelativeOverlap" />


        <ImageButton
            android:id="@+id/saveCPasswordBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_save"
            app:tint="#00BCD4"
            tools:ignore="ContentDescription" />

    </RelativeLayout>


    <EditText
        android:id="@+id/passwordCCategoryEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_category_gray"
        android:drawablePadding="10dp"
        android:hint="@string/account_name"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rlTitle"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/passwordCUserIdET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:drawableTint="#C9C9C9"
        android:hint="@string/user_id"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordCCategoryEt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordCCategoryEt"
        app:layout_constraintTop_toBottomOf="@+id/passwordCCategoryEt"
        tools:ignore="RtlSymmetry,TextFields"
        tools:targetApi="m" />


    <EditText
        android:id="@+id/passwordCPasswordET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:drawableTint="#C9C9C9"
        android:hint="@string/password"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordCUserIdET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordCUserIdET"
        app:layout_constraintTop_toBottomOf="@+id/passwordCUserIdET"
        tools:ignore="RtlSymmetry,TextFields"
        tools:targetApi="m" />


    <EditText
        android:id="@+id/passwordCCnfPasswordET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:drawableTint="#C9C9C9"
        android:hint="@string/confirm_password"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordCPasswordET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordCPasswordET"
        app:layout_constraintTop_toBottomOf="@+id/passwordCPasswordET"
        tools:ignore="RtlSymmetry,TextFields"
        tools:targetApi="m" />

    <EditText
        android:id="@+id/passwordCOtherEt"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableTint="#C9C9C9"
        android:gravity="top"
        android:hint="@string/other_details"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordCCnfPasswordET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordCCnfPasswordET"
        app:layout_constraintTop_toBottomOf="@+id/passwordCCnfPasswordET"
        tools:ignore="RtlSymmetry,TextFields"
        tools:targetApi="m" />


    <Button
        android:id="@+id/deleteCPasswordBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_bg"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordCOtherEt"
        app:layout_constraintVertical_bias="0.357" />


</androidx.constraintlayout.widget.ConstraintLayout>