<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:elevation="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="1dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/passwordCardIconTv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circular_bg"
                android:padding="10dp"
                android:text="@string/g"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/gray_text"
                android:textSize="28sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/passwordCardIconTv"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/passwordCardAccountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_toStartOf="@+id/passwordCardCpyPassword"
                    android:maxLength="12"
                    android:scrollbars="horizontal"
                    android:text="@string/google"
                    android:textAllCaps="true"
                    android:textColor="@color/gray_text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/passwordCardDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/passwordCardAccountTV"
                    android:layout_marginTop="5dp"
                    android:text="@string/_12_05_2000"
                    android:textColor="@color/gray_text" />


                <ImageButton
                    android:id="@+id/passwordCardVertPassword"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@null"
                    android:padding="8dp"
                    android:src="@drawable/ic_vert"
                    app:tint="@color/gray_icon"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/passwordCardCpyPassword"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toStartOf="@+id/passwordCardVertPassword"
                    android:background="@null"
                    android:padding="8dp"
                    android:src="@drawable/ic_copy"
                    app:tint="@color/gray_icon"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>